= Release notes v. 4.2

== Table of Contents